Refactor HTML structure and scripts for news monitoring

--- a/index.html
+++ b/index.html
@@ -1,474 +1,158 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Monitor de Notícias e Relatórios - Gestão de Perdas - Lojas do Vale</title>
+/********************************************
+ * 1) NOTÍCIAS GNEWS
+ ********************************************/
+const API_KEY = "5b7b286d2bdcfe133230f8b2f2ee5315";
+const QUERY = "supermercado segurança OR furto OR roubo OR perda";
+const URL = `https://gnews.io/api/v4/search?q=${encodeURIComponent(QUERY)}&lang=pt&token=${API_KEY}&max=10`;
 
-<!-- Fonte Inter -->
-<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
+async function carregarNoticias() {
+  const container = document.getElementById("noticias");
+  container.innerHTML = "<p>Carregando...</p>";
 
-<style>
-  /* Reset e fonte */
-  *, *::before, *::after {
-    box-sizing: border-box;
-  }
-  body {
-    font-family: 'Inter', sans-serif;
-    background: #f8fafc;
-    color: #1e293b;
-    margin: 0; padding: 0 1rem;
-    line-height: 1.5;
-    min-height: 100vh;
-    display: flex; flex-direction: column; align-items: center;
-  }
+  try {
+    const response = await fetch(URL);
+    const data = await response.json();
 
-  h1 {
-    color: #1e40af;
-    margin: 1rem 0 2rem 0;
-    text-align: center;
-    font-weight: 700;
-  }
-
-  /* Container geral */
-  .container {
-    max-width: 900px;
-    width: 100%;
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 16px rgb(30 64 175 / 0.15);
-    padding: 1.5rem 2rem;
-    margin-bottom: 3rem;
-  }
-
-  /* Abas */
-  .tabs {
-    display: flex;
-    border-bottom: 3px solid #cbd5e1;
-    margin-bottom: 1rem;
-  }
-  .tab {
-    flex: 1;
-    text-align: center;
-    padding: 0.75rem 1rem;
-    cursor: pointer;
-    background: #e0e7ff;
-    color: #1e40af;
-    font-weight: 600;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    user-select: none;
-    position: relative;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  .tab:not(.active):hover,
-  .tab:not(.active):focus {
-    background-color: #c7d2fe;
-    outline: none;
-  }
-  .tab.active {
-    background: #1e40af;
-    color: white;
-    box-shadow: 0 -3px 0 #1e40af inset;
-  }
-
-  /* Conteúdo das abas */
-  .tab-content {
-    display: none;
-    animation: fadeIn 0.4s ease forwards;
-  }
-  .tab-content.active {
-    display: block;
-  }
-  @keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity: 1;}
-  }
-
-  /* Busca Análise Individualizada */
-  #analise input[type="text"] {
-    width: 100%;
-    padding: 0.5rem 0.75rem;
-    border: 2px solid #cbd5e1;
-    border-radius: 6px;
-    font-size: 1rem;
-    margin-bottom: 1rem;
-    transition: border-color 0.3s;
-  }
-  #analise input[type="text"]:focus {
-    border-color: #1e40af;
-    outline: none;
-    box-shadow: 0 0 8px rgb(30 64 175 / 0.4);
-  }
-
-  /* Tabelas estilos */
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 1.5rem;
-  }
-  thead tr {
-    background-color: #1e40af;
-    color: white;
-  }
-  th, td {
-    padding: 0.5rem 0.75rem;
-    border: 1px solid #cbd5e1;
-    text-align: left;
-  }
-  tbody tr:nth-child(even) {
-    background-color: #f1f5ff;
-  }
-
-  /* Mensagem nenhuma notícia / erro */
-  .message {
-    color: #64748b;
-    font-style: italic;
-    padding: 1rem 0;
-  }
-
-  /* Responsividade */
-  @media (max-width: 600px) {
-    body {
-      padding: 0 0.5rem;
-    }
-    .container {
-      padding: 1rem 1rem;
-    }
-    th, td {
-      font-size: 0.9rem;
-      padding: 0.4rem 0.5rem;
-    }
-    #analise input[type="text"] {
-      font-size: 0.9rem;
-    }
-  }
-</style>
-</head>
-<body>
-
-<h1>📰 Monitor de Notícias e Relatórios -  Gestão de Perdas - Lojas do Vale</h1>
-
-<div class="container" role="main">
-
-  <nav class="tabs" role="tablist" aria-label="Seções de relatório">
-    <button class="tab active" role="tab" aria-selected="true" aria-controls="analise" id="tab-analise" tabindex="0">
-      Análise Individualizada
-    </button>
-    <button class="tab" role="tab" aria-selected="false" aria-controls="relatorio" id="tab-relatorio" tabindex="-1">
-      Relatório Geral
-    </button>
-  </nav>
-
-  <!-- Análise Individualizada -->
-  <section id="analise" class="tab-content active" role="tabpanel" aria-labelledby="tab-analise" aria-live="polite">
-    <label for="searchInput" class="visually-hidden">Buscar Loja ou Mês</label>
-    <input
-      type="text"
-      id="searchInput"
-      placeholder="Buscar por Loja, Mês ou Palavra-chave..."
-      aria-describedby="searchHelp"
-      autocomplete="off"
-    />
-    <small id="searchHelp" style="color:#64748b; display:block; margin-bottom:1rem;">
-      Digite para filtrar os dados da análise individualizada
-    </small>
-
-    <div id="analiseContent">
-      <!-- Conteúdo da Análise será gerado via JS -->
-    </div>
-  </section>
-
-  <!-- Relatório Geral -->
-  <section id="relatorio" class="tab-content" role="tabpanel" aria-labelledby="tab-relatorio" aria-live="polite">
-    <div id="relatorioContent">
-      <!-- Conteúdo do Relatório Geral será gerado via JS -->
-    </div>
-  </section>
-
-</div>
-
-<script>
-  // Dados estruturados - Análise Individualizada (simplificado)
-  const analiseDados = [
-    {
-      loja: 'Loja 09',
-      meses: {
-        Janeiro: 467.50,
-        Fevereiro: 423.99,
-        Março: 444.17,
-        Abril: 558.86,
-        Maio: 414.55
-      },
-      total: 2309.07,
-      media: 461.81,
-      destaque: 'Abril teve o maior valor registrado de perdas.'
-    },
-    {
-      loja: 'Loja 10',
-      meses: {
-        Janeiro: 18.73,
-        Fevereiro: 47.21,
-        Março: 48.43,
-        Abril: 28.70,
-        Maio: 22.25
-      },
-      total: 165.32,
-      media: 33.06,
-      destaque: 'Loja com menor volume total de perdas.'
-    },
-    {
-      loja: 'Loja 11',
-      meses: {
-        Janeiro: 530.52,
-        Fevereiro: 352.60,
-        Março: 721.69,
-        Abril: 358.22,
-        Maio: 621.39
-      },
-      total: 2584.42,
-      media: 516.88,
-      destaque: 'Destaque: Maior perda total e maior valor em um único mês (março).'
-    },
-    {
-      loja: 'Loja 25',
-      meses: {
-        Janeiro: 59.96,
-        Fevereiro: 108.17,
-        Março: 154.24,
-        Abril: 234.07,
-        Maio: 228.13
-      },
-      total: 784.57,
-      media: 156.91,
-      destaque: ''
-    },
-    {
-      loja: 'Loja 28',
-      meses: {
-        Janeiro: 96.78,
-        Fevereiro: 131.81,
-        Março: 324.99,
-        Abril: 295.77,
-        Maio: 42.98
-      },
-      total: 892.33,
-      media: 178.47,
-      destaque: ''
-    },
-    {
-      loja: 'Loja 36',
-      meses: {
-        Janeiro: 175.85,
-        Fevereiro: 116.23,
-        Março: 246.21,
-        Abril: 195.54,
-        Maio: 189.96
-      },
-      total: 923.79,
-      media: 184.76,
-      destaque: ''
-    },
-    {
-      loja: 'Loja 48',
-      meses: {
-        Janeiro: 340.18,
-        Fevereiro: 326.20,
-        Março: 754.34,
-        Abril: 210.11,
-        Maio: 195.32
-      },
-      total: 1826.15,
-      media: 365.23,
-      destaque: 'Março: maior valor de perdas entre todas as lojas.'
-    },
-    {
-      loja: 'Loja 53',
-      meses: {
-        Janeiro: 281.04,
-        Fevereiro: 63.68,
-        Março: 138.35,
-        Abril: 110.77,
-        Maio: 139.38
-      },
-      total: 733.22,
-      media: 146.64,
-      destaque: ''
-    }
-  ];
-
-  // Dados simplificados Relatório Geral - pode expandir conforme necessidade
-  const relatorioDados = {
-    topProdutos: [
-      {
-        produto: 'BRINQ LIDER/DEDOCHES OVO TURMA MONICA',
-        perda: 'R$ 98,61',
-        lojas: 'Loja 009 (R$ 53,70), Loja 025 (R$ 44,91)'
-      },
-      {
-        produto: 'SBP 45NOITES RF.50%DESC.SEG.UN.SUAV',
-        perda: 'R$ 38,74',
-        lojas: 'Loja 009 e Loja 011 (R$ 19,37 cada)'
-      },
-      {
-        produto: 'DESOD.GIOVANNA B.AERO 2X150M.30%DES CLASSIC',
-        perda: 'R$ 32,70',
-        lojas: 'Loja 009 e Loja 011 (R$ 16,35 cada)'
-      },
-      {
-        produto: 'CHOC ARCOR TORTUGUITA 134.5G.SORTID',
-        perda: 'R$ 20,42',
-        lojas: 'Loja 028 (R$  10,22), Loja 011 (R$ 10,20)'
-      },
-      {
-        produto: 'DESOD.GIOVANNA BABY ROLL-ON 2X50ML BLUE',
-        perda: 'R$ 17,95',
-        lojas: 'Loja 036 (R$ 9,34), Loja 011 (R$ 8,61)'
-      }
-    ],
-    lojasFrequencia: [
-      { loja: 'Loja 011 (V.VERDE)', produtos: 19, obs: 'Alta recorrência em itens de mercearia e higiene' },
-      { loja: 'Loja 009 (COLONIAL)', produtos: 16, obs: 'Alto impacto financeiro em diversos produtos' },
-      { loja: 'Loja 048 (LORENA)', produtos: 11, obs: 'Foco em bebidas lácteas e bomboniere' },
-      { loja: 'Loja 025 (TAUBATE1)', produtos: 5, obs: 'Menor quantidade, mas com altos valores unitários' },
-      { loja: 'Loja 036 (V.REDOND)', produtos: 4, obs: 'Produtos variados, valores mais baixos' }
-    ],
-    categorias: [
-      'Bomboniere / Chocolates (ex: M&Ms, Twix, Tortuguita, Serenata, Sonho de Valsa)',
-      'Higiene Pessoal (ex: Giovanna Baby, SBP, Desodorantes)',
-      'Bebidas Lácteas (ex: Yakult, Toddynho, Italakinho)',
-      'Infantil / Brinquedos (ex: Dedoches Turma da Mônica)'
-    ]
-    // Pode adicionar as outras partes da informação aqui para exibir
-  };
-
-  // Função para formatar números para BRL (opcional)
-  function formatBrt(value) {
-    return value.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + ' Brt';
-  }
-
-  // Geração conteúdo Análise Individualizada
-  function gerarAnalise(dados, filtro = '') {
-    const container = document.getElementById('analiseContent');
-    const filtroLower = filtro.toLowerCase();
-
-    // Filtra pelos nomes das lojas e meses
-    const dadosFiltrados = dados.filter(item => {
-      if (!filtro) return true;
-      if (item.loja.toLowerCase().includes(filtroLower)) return true;
-      for (const mes in item.meses) {
-        if (mes.toLowerCase().includes(filtroLower)) return true;
-        // Também pesquisar pelo valor formatado?
-      }
-      return false;
-    });
-
-    if (dadosFiltrados.length === 0) {
-      container.innerHTML = '<p class="message">Nenhum resultado encontrado para sua busca.</p>';
+    if (!data.articles || data.articles.length === 0) {
+      container.innerHTML = "<p>Nenhuma notícia encontrada.</p>";
       return;
     }
 
-    let html = '';
-    dadosFiltrados.forEach(({loja, meses, total, media, destaque}) => {
-      html += `<article style="margin-bottom:1.5rem;">
-        <h2 style="color:#1e40af;">${loja}</h2>
-        <table aria-label="Perdas mensais da ${loja}">
-          <thead><tr><th>Mês</th><th>Valor</th></tr></thead>
-          <tbody>
-          ${Object.entries(meses).map(([mes, val]) =>
-            `<tr><td>${mes}</td><td>${formatBrt(val)}</td></tr>`).join('')}
-          </tbody>
-          <tfoot>
-            <tr><th>Total</th><th>${formatBrt(total)}</th></tr>
-            <tr><th>Média Mensal</th><th>${formatBrt(media)}</th></tr>
-          </tfoot>
-        </table>
-        ${destaque ? `<p><strong>🔎 ${destaque}</strong></p>` : ''}
-      </article>`;
+    container.innerHTML = "";
+    data.articles.forEach(article => {
+      const div = document.createElement("div");
+      div.className = "noticia";
+      div.innerHTML = `
+        <h3><a href="${article.url}" target="_blank">${article.title}</a></h3>
+        <p>${article.description || ""}</p>
+        <small><strong>${article.source.name}</strong> - ${new Date(article.publishedAt).toLocaleDateString()}</small>
+      `;
+      container.appendChild(div);
     });
-
-    container.innerHTML = html;
+  } catch (error) {
+    container.innerHTML = "<p>Erro ao carregar notícias.</p>";
+    console.error("Erro ao buscar notícias:", error);
   }
+}
 
-  // Geração conteúdo Relatório Geral
-  function gerarRelatorio(dados) {
-    const container = document.getElementById('relatorioContent');
+/********************************************
+ * 2) NOTÍCIAS ABRAPPE
+ ********************************************/
+async function carregarNoticiasAbrappe() {
+  const container = document.getElementById("noticias-abrappe");
+  container.innerHTML = "<p>Carregando notícias da Abrappe...</p>";
 
-    let html = `<section>
-      <h2 style="color:#1e40af;">🔝 Top 5 Produtos com Maior Perda Total em Múltiplas Lojas</h2>
-      <table aria-label="Top 5 Produtos com maior perda">
-        <thead><tr><th>Produto</th><th>Perda Líquida Total</th><th>Lojas com Maior Incidência</th></tr></thead>
-        <tbody>
-          ${dados.topProdutos.map(p => `<tr>
-            <td>${p.produto}</td>
-            <td>${p.perda}</td>
-            <td>${p.lojas}</td>
-          </tr>`).join('')}
-        </tbody>
-      </table>
-    </section>`;
+  try {
+    const res = await fetch("https://SEU_WORKER.cloudflare.workers.dev/api/abrappe");
+    const dados = await res.json();
 
-    html += `<section>
-      <h2 style="color:#1e40af;">🏬 Lojas com Maior Frequência de Incidência</h2>
-      <table aria-label="Lojas com maior frequência de incidência">
-        <thead><tr><th>Loja</th><th>Nº de Produtos com Incidência</th><th>Observações</th></tr></thead>
-        <tbody>
-          ${dados.lojasFrequencia.map(l => `<tr>
-            <td>${l.loja}</td>
-            <td>${l.produtos}</td>
-            <td>${l.obs}</td>
-          </tr>`).join('')}
-        </tbody>
-      </table>
-    </section>`;
+    if (dados.length === 0) {
+      container.innerHTML = "<p>Nenhuma notícia da Abrappe encontrada.</p>";
+      return;
+    }
 
-    html += `<section>
-      <h2 style="color:#1e40af;">📊 Categorias Mais Incidentes</h2>
-      <ul>
-        ${dados.categorias.map(c => `<li>${c}</li>`).join('')}
-      </ul>
-    </section>`;
-
-    container.innerHTML = html;
-  }
-
-  // Troca de abas com acessibilidade
-  const tabs = document.querySelectorAll('.tab');
-  const tabContents = document.querySelectorAll('.tab-content');
-
-  tabs.forEach(tab => {
-    tab.addEventListener('click', () => {
-      // Atualiza selecionado
-      tabs.forEach(t => {
-        t.classList.remove('active');
-        t.setAttribute('aria-selected', 'false');
-        t.setAttribute('tabindex', '-1');
-      });
-      tab.classList.add('active');
-      tab.setAttribute('aria-selected', 'true');
-      tab.setAttribute('tabindex', '0');
-
-      // Mostrar conteúdo correspondente
-      const targetId = tab.getAttribute('aria-controls');
-      tabContents.forEach(tc => {
-        tc.classList.toggle('active', tc.id === targetId);
-      });
-
-      // Coloca foco no conteúdo
-      document.getElementById(targetId).focus();
+    container.innerHTML = "";
+    dados.forEach(noticia => {
+      const div = document.createElement("div");
+      div.className = "noticia";
+      div.innerHTML = `
+        <h3><a href="${noticia.link}" target="_blank">${noticia.titulo}</a></h3>
+      `;
+      container.appendChild(div);
     });
+  } catch (e) {
+    container.innerHTML = "<p>Erro ao carregar notícias da Abrappe.</p>";
+    console.error(e);
+  }
+}
+
+carregarNoticias();
+carregarNoticiasAbrappe();
+
+/********************************************
+ * 3) JSON DE PERDAS (SEU ARQUIVO TRANSFORMADO)
+ ********************************************/
+const perdasData = [
+  {
+    loja: 9,
+    ano2024: { Janeiro: 187.88, Fevereiro: 212.64, Março: 230.75 },
+    ano2025: { Janeiro: 467.50, Fevereiro: null, Março: null }
+  },
+  {
+    loja: 11,
+    ano2024: { Janeiro: 144.55, Fevereiro: 199.10, Março: 210.00 },
+    ano2025: { Janeiro: 522.10, Fevereiro: null, Março: null }
+  },
+  {
+    loja: 25,
+    ano2024: { Janeiro: 155.77, Fevereiro: 180.20, Março: 207.90 },
+    ano2025: { Janeiro: 312.44, Fevereiro: null, Março: null }
+  }
+];
+
+/********************************************
+ * 4) GERAR GRÁFICOS COM PLOTLY
+ ********************************************/
+function gerarGraficos() {
+  
+  // ---------- GRÁFICO 1: COMPARATIVO 2024 X 2025 ----------
+  const lojas = perdasData.map(d => "Loja " + d.loja);
+  const perdas2024 = perdasData.map(d => d.ano2024.Janeiro);
+  const perdas2025 = perdasData.map(d => d.ano2025.Janeiro);
+
+  const trace1 = { x: lojas, y: perdas2024, type: "bar", name: "2024" };
+  const trace2 = { x: lojas, y: perdas2025, type: "bar", name: "2025" };
+
+  Plotly.newPlot("grafico1", [trace1, trace2], {
+    title: "Comparativo de Perdas – Janeiro 2024 x 2025"
   });
 
-  // Busca filtro da análise
-  const inputBusca = document.getElementById('searchInput');
-  inputBusca.addEventListener('input', () => {
-    gerarAnalise(analiseDados, inputBusca.value);
+  
+  // ---------- GRÁFICO 2: TENDÊNCIA POR LOJA ----------
+  const meses = ["Jan", "Fev", "Mar"];
+
+  const linhas = perdasData.map(loja => ({
+    x: meses,
+    y: [
+      loja.ano2024.Janeiro,
+      loja.ano2024.Fevereiro,
+      loja.ano2024.Março
+    ],
+    mode: "lines+markers",
+    name: "Loja " + loja.loja
+  }));
+
+  Plotly.newPlot("grafico2", linhas, {
+    title: "Tendência Mensal de Perdas (2024)"
   });
 
-  // Inicializa conteúdo
-  gerarAnalise(analiseDados);
-  gerarRelatorio(relatorioDados);
-</script>
+  
+  // ---------- GRÁFICO 3: RANKING DE PERDAS ----------
+  const total = perdasData.map(d => ({
+    loja: d.loja,
+    total: d.ano2024.Janeiro + d.ano2024.Fevereiro + d.ano2024.Março
+  }));
 
-</body>
-</html>
+  const traceRanking = {
+    x: total.map(t => "Loja " + t.loja),
+    y: total.map(t => t.total),
+    type: "bar",
+    name: "Ranking 2024"
+  };
+
+  Plotly.newPlot("grafico3", [traceRanking], {
+    title: "Ranking de Perdas por Loja – 2024"
+  });
+}
+
+gerarGraficos();
+
+/********************************************
+ * 5) EXPORTAR GRÁFICOS EM PNG
+ ********************************************/
+function baixarGrafico(id, nome) {
+  Plotly.downloadImage(document.getElementById(id), {
+    format: "png",
+    filename: nome
+  });
+}
