--- a/index.html
+++ b/index.html
@@ -1,96 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <title>Monitoramento — Notícias & Perdas</title>
+    <meta charset="UTF-8">
+    <title>Gráficos de Perdas por Loja</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-  <!-- Seu CSS existente (mantido) -->
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f3f3f3;
-      margin: 2rem;
-      color: #222;
-    }
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f3f3f3;
+            margin: 2rem;
+            color: #222;
+        }
 
-    h1 {
-      color: #0066cc;
-    }
+        h1 {
+            color: #0066cc;
+        }
 
-    .noticia {
-      background-color: white;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-    }
-    .noticia a {
-      color: #0066cc;
-      text-decoration: none;
-    }
-    .noticia a:hover {
-      text-decoration: underline;
-    }
+        .grafico-container {
+            background: white;
+            padding: 1rem;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            margin-bottom: 2rem;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+        }
 
-    /* layout gráfico */
-    .charts-wrap { display: grid; gap: 18px; margin-top: 1rem; }
-    .big { grid-column: 1 / -1; background: white; padding: 12px; border-radius:8px; box-shadow: 0 1px 3px rgba(0,0,0,0.06); }
-    .grid-two { display:grid; grid-template-columns: 1fr 1fr; gap:12px; }
-    .store-grid { display:grid; grid-template-columns: repeat(auto-fit,minmax(320px,1fr)); gap:12px; margin-top:12px; }
-
-    .card { background:white; padding:10px; border-radius:8px; border:1px solid #e6e6e6; box-shadow:0 1px 2px rgba(0,0,0,0.04); }
-    .controls { display:flex; gap:8px; align-items:center; margin-bottom:8px; flex-wrap:wrap; }
-    .btn { padding:6px 10px; border-radius:6px; border:1px solid #ccc; background:#fff; cursor:pointer; }
-  </style>
-
-  <!-- Plotly -->
-  <script src="https://cdn.plot.ly/plotly-2.26.0.min.js"></script>
+        canvas {
+            width: 100%;
+            max-width: 900px;
+        }
+    </style>
 </head>
+
 <body>
-  <h1>📊 Dashboard — Notícias & Perdas</h1>
 
-  <h2>📰 Notícias sobre Segurança no Varejo</h2>
-  <div id="noticias"></div>
+    <h1>Gráfico Comparativo de Perdas (2024 vs 2025)</h1>
 
-  <h2>🛡 Notícias da Abrappe</h2>
-  <div id="noticias-abrappe"></div>
-
-  <h2>📈 Gráficos de Perdas</h2>
-
-  <div class="charts-wrap">
-    <!-- Comparativo geral -->
-    <div class="big card">
-      <div class="controls">
-        <strong>Comparativo Anual por Loja (Total 2024 × 2025)</strong>
-        <button class="btn" id="download-comp-png">Baixar PNG</button>
-        <button class="btn" id="download-comp-svg">Baixar SVG</button>
-      </div>
-      <div id="chart-comparativo" style="height:420px;"></div>
+    <!-- Gráfico geral -->
+    <div class="grafico-container">
+        <h2>Geral: Todas as Lojas</h2>
+        <canvas id="graficoGeral"></canvas>
     </div>
 
-    <!-- Seletores -->
-    <div class="card">
-      <div class="controls">
-        <label for="select-loja"><strong>Selecionar loja (gráfico individual):</strong></label>
-        <select id="select-loja"></select>
-        <button class="btn" id="download-loja-png">Baixar PNG</button>
-        <button class="btn" id="download-loja-svg">Baixar SVG</button>
-      </div>
-      <div id="chart-loja" style="height:360px;"></div>
-    </div>
+    <!-- Aqui entrarão os gráficos individuais -->
+    <div id="graficos-lojas"></div>
 
-    <!-- Múltiplos gráficos individuais (todos as lojas em small multiples) -->
-    <div class="card big">
-      <div class="controls">
-        <strong>Gráficos individuais por loja (2024 × 2025)</strong>
-        <button class="btn" id="download-all-png">Baixar PNG (comparativo geral)</button>
-      </div>
-      <div id="stores-container" class="store-grid"></div>
-    </div>
-  </div>
+    <script src="script.js"></script>
 
-  <!-- script.js embutido abaixo -->
-  <script src="script.js"></script>
 </body>
 </html>
